2015-04-29  Per Bothner  <per@bothner.com>

	* Declaration.java (checkNameDecl): Minor tweak to prevous change, to
	handle case where nameDecl was manually preset (as in define.java),
	then bound to a different value before being bound to the lambda.

2015-04-27  Per Bothner  <per@bothner.com>

	* Declaration.java (checkNameDecl): Generalize check for old value,
	specifically so it also handles SET_RHS_KIND.

2015-04-24  Per Bothner  <per@bothner.com>

	* ModuleExp.java (subModulesOnly): New helper method.
	(evalToClass): Skip compilation and more if subModulesOnly().
	* Compilation.java (process): Skip code-generation if subModulesOnly().

2015-04-22  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (setArgs): New method takes explicit
	argument count.

2015-04-18  Per Bothner  <per@bothner.com>

	* Declaration.java (scanNesting): New field.
	(getScanNesting, setScanNesting): Access methods.

	* LambdaExp.java (addParameter): New convenience method.

2015-04-16  Per Bothner  <per@bothner.com>

	* CatchClause.java (compile): Use Declaration#compileStore to
	save exception into variable - in case it is non-simple.

	* SetExp.java (apply): Handle null symbol.

2015-04-10  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule): Flush any messages from evalModule1
	before actually running module.

2015-04-03  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitQuoteExp): Revert previous change. It doesn't
	work when the argument is shared: VALIDATED is set the first time,
	and then this method is never called again.  Instead map boolean
	literals to primitive types at Lisp-rewrite-times.
	* ConditionalTarget.java (compileFromStack): Compute sig
	variable *after* call to asBooleanValue.

2015-04-02  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitQuoteExp): If the value is a Boolean that is
	not explicitly typed, change to use primitive boolean.

	* LambdaExp.java (compile): Null out moduleInstanceVar